# async-std-http-client

./: .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
bulk_test/: Cargo.toml
bulk_test/src/: main.rs
main/: Cargo.toml
main/src/: lib.rs  model.rs  request_writer.rs  response_parser.rs
simple_test/: Cargo.toml
simple_test/src/: main.rs
