[package]
name = "async-std-http-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.6"
arc-swap = "0.4"
im = "15.0"
futures = "0.3"
serde_json = "1.0"
prost = "0.6"
url = "2.1.1"
http_parser = "0.0.2"
log = "0.4"
http = "0.2.1"
itertools = "0.9.0"
base64 = "0.12.3"
encoding = "0.2.33"
smallvec = "1.4.2"
libflate = "1.0.2"

[dependencies.async-tls]
version = "0.9"
default-features = false
features = ["client"]