[package]
edition = "2018"
name = "async-std-http-client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1"
async-std = "1"
base64 = "0.13"
encoding = "0.2.33"
futures = "0.3"
http = "0.2.1"
http_parser = "0.0.2"
im = "15.0"
itertools = "0.10"
libflate = "1.0.2"
log = "0.4"
serde_json = "1.0"
smallvec = "1.6"
url = "2.1"
webpki = "0.21"
rustls = {version = "0.19", features = ["dangerous_configuration"]}

[dependencies.async-tls]
default-features = false
features = ["client"]
version = "0.11"
